# GENZ_MUSEUM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analyses/: 20260627_193945.json
analyses/fun/: 95988061c0030088.json  a0838374d1202000.json  a521c00880c08080.json  b400824802c22c48.json  b5d0d00cc022c030.json  b680c924c0244010.json  d00a092d348120a0.json  e44fcb616c402440.json  f487836080440002.json
analyses/fun/immersive/: f487836080440002.captions.json
backend/: analyzer.py  dedup.py  immersive.py  matcher.py  memory.py  narrator.py  profile.py  server.py
docs/: app.md  long_term_memory.md  narration_prompt.md  prompt.md  short_term_memory.md
frontend/: index.html
frontend/src/: App.tsx  PageBiblio.tsx  PageI.tsx  PageII.tsx  data.ts  types.ts
immersive_scene/: README.md  __init__.py  audio.py  claude_client.py  elevenlabs_client.py  pipeline.py  prompts.py  voices.py
old-profiles/1/: 20260627_225524.json  20260627_225807.json  20260628_005000.json  20260628_005709.json  20260628_005745.json
old-profiles/2/: 20260628_005908.json  20260628_010854.json  20260628_010942.json  20260628_011506.json
old-profiles/3/: 20260628_011608.json  20260628_011645.json  20260628_012124.json
old-profiles/fun/: c080a920a0808000.json  d96924821a97c818.json
old-profiles/serious/: 83e0709400409080.json  d2810bd530800040.json
